Beløp deles i modell og dto (#4682)